# numpy-exts

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py
npexts/: c_trade_fsm.pyx  lib.rs  py_trade_fsm.py
tests/: test_npexts.py
